IVYPORTAL-6535: UI components for Serenity II  - Update other components    + Fix margin-left when clicking show detail on cases page    + Align toggle letter in field set

--- a/AxonIvyPortal/PortalStyle/webContent/resources/primefaces-serenity-ivy/theme.scss
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/primefaces-serenity-ivy/theme.scss
@@ -209,6 +209,7 @@ body .ui-selectmanycheckbox.ui-widget label, body .ui-selectoneradio.ui-widget l
 .ui-fieldset {
   .ui-fieldset-legend {
     color: $black !important;
+    line-height: 1.2rem;
     .ui-fieldset-toggler {
       padding: 3px !important;
       background-color: #eee !important;
